메모를 고쳐야합니다

--- a/220729/media/index.html
+++ b/220729/media/index.html
@@ -12,16 +12,16 @@
         <table>
             <tr>
                 <td>작성자</td>
-                <td> <input type="text"></td>
+                <td> <input type="text" name="name"></td>
             </tr>
             <br>
             <tr>
                 <td>작성일시</td>
-                <td><input type="datetime-local"><br></td>
+                <td><input type="datetime-local" name="date"><br></td>
             </tr>
             <tr>
                 <td>내용</td>
-                <td><textarea name="content" id="content" cols="30" rows="10"></textarea></td>
+                <td><textarea name="content" id="content" cols="30" rows="10" name="contents"></textarea></td>
             </tr>
             <tr>
                 <td><button type="submit">저장</button></td>
