드디어하는프로젝트

--- a/220729/media/login.html
+++ b/220729/media/login.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>LOGIN</h1>
-    <form method="post">
+    <form method="post" action="process/login">
         <table border="1">
             <tr>
                 <td>ID</td>
