--- a/mongoexam/public/login.html
+++ b/mongoexam/public/login.html
@@ -1,26 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-</head>
+<html>
+	<head>
+		<meta charset="UTF-8">
+		<title>로그인 테스트</title>
+	</head>
 <body>
-    <h1>LOGIN</h1>
-    <form method="post" action="process/login">
-        <table border="1">
-            <tr>
-                <td><label>아이디</label></td>
-                <td><input type="text" name="id"></td>
-            </tr>
-            <tr>
-                <td><label>비번</label></td>
-                <td><input type="text" name="password"></td>
-            </tr>
-        </table>
-        <p></p>
-        <input type="submit">
-    </form>
+	<h1>로그인</h1>
+	<br>
+	<form method="post" action="/process/login">
+		<table>
+			<tr>
+				<td><label>아이디</label></td>
+				<td><input type="text" name="id" /></td>
+			</tr>
+			<tr>
+				<td><label>비밀번호</label></td>
+				<td><input type="password" name="password" /></td>
+			</tr>
+		</table>
+		<input type="submit" value="전송" name="" />
+	</form>
 </body>
 </html>
