--- a/memo_test/public/index.html
+++ b/memo_test/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MEMO</title>
+    <title>INDEX</title>
 </head>
 <style>
     @font-face {
@@ -51,22 +51,13 @@
     }
 </style>
 <body>
-    <div class="memo">
-        <form method="post" action="/process/index">
-            <div class="title">
-                <input type="text" name="title" class="input_title" placeholder="제목">
-            </div>
-            <div class="contents">
-                <textarea name="contents" id="content"  rows="10"  placeholder="내용"></textarea>
-            </div>
-            <button type="submit" id="save">저장</button>
-            <button type="reset" id="reset" onclick="return confirm_reset()">초기화
-        </form>
+    <div class="main">
+        <a href="/login.html">로그인</a>
+        <a href="/signup.html">회원가입</a>
+        <a href="/memo.html">메모장</a>
     </div>
 </body>
 </html>
 <script text="javascript">
-    function confirm_reset() {
-        return confirm("초기화 하시겠습니까?");
-    }
+
 </script>
