--- a/memo_test/public/signup.html
+++ b/memo_test/public/signup.html
@@ -25,9 +25,9 @@
         <h1>회원가입하기</h1>
         <br>
         <form action="update.php" method="post">
-            <div class="loginclass"><div class="signupclass">닉네임</div><input type="text" name="user_name" class="signupform"></div>
-            <div class="loginclass"><div class="signupclass">이메일</div><input type="email" name="user_email" class="signupform"></div>
-            <div class="loginclass"><div class="signupclass">비밀번호</div><input type="password" name="user_pass" id="pass1" class="signupform" onchange="check_pw()"></div>
+            <div class="loginclass"><div class="signupclass">닉네임</div><input type="text" name="name" class="signupform"></div>
+            <div class="loginclass"><div class="signupclass">아이디</div><input type="email" name="id" class="signupform"></div>
+            <div class="loginclass"><div class="signupclass">비밀번호</div><input type="password" name="password" id="pass1" class="signupform" onchange="check_pw()"></div>
             <div class="loginclass">
                 <div class="signupclass">비밀번호 확인
                     &nbsp;<span id="check">123</span>
