--- a/memo_test/public/memo.html
+++ b/memo_test/public/memo.html
@@ -1,45 +1,72 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
-    <title>메모</title>
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js"
-        integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-    <script src="moment.min.js"></script>
-    <script>
-
-        $(function () {
-            var curDate = moment().format('YYYY-MM-DD HH:mm');
-            $('#createDate').attr('value', curDate);
-        });
-
-    </script>
-
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MEMO</title>
 </head>
-
+<style>
+    @font-face {
+        font-family: 'EarlyFontDiary';
+        src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_220508@1.0/EarlyFontDiary.woff2') format('woff2');
+        font-weight: normal;
+        font-style: normal;
+    }
+    *{
+        text-align: center;
+        font-family: 'EarlyFontDiary';
+        font-size: large;
+    }
+    .memo{
+        display: inline-block;
+        text-align: center;
+        /* border: 1px solid aquamarine; */
+        width: fit-content;
+        height: auto;
+        background-color: yellow;
+    }
+    button{
+        border: 0;
+        width: 100px;
+        height: 30px;
+        cursor: pointer;
+        /* padding: 10px; */
+    }
+    #save{
+        background-color: green;
+    }
+    #reset{
+        background-color: red;
+    }
+    input{
+        border: 0;
+    }
+    textarea{
+        border: 0;
+        text-align: left;
+    }
+    .input_title{
+        width: 220px;
+    }
+</style>
 <body>
-    <h3>나의 메모</h3>
-    <br>
-    <form method="post" action="/process/save">
-        <table>
-            <tr>
-                <td><label>작성자</label></td>
-                <td><input type="text" name="author" /></td>
-            </tr>
-            <tr>
-                <td><label>작성일시</label></td>
-                <td><input type="text" name="createDate" id="createDate" /></td>
-            </tr>
-            <tr>
-                <td><label>내용</label></td>
-                <td><textarea name="contents" style="width:12em;height:10em;"></textarea></td>
-            </tr>
-        </table>
-        <input type="submit" value="저장" name="" />
-        <input type="button" value="닫기" />
-    </form>
+    <div class="memo">
+        <form method="post" action="/process/index">
+            <div class="title">
+                <input type="text" name="title" class="input_title" placeholder="제목">
+            </div>
+            <div class="contents">
+                <textarea name="contents" id="content"  rows="10"  placeholder="내용"></textarea>
+            </div>
+            <button type="submit" id="save">저장</button>
+            <button type="reset" id="reset" onclick="return confirm_reset()">초기화
+        </form>
+    </div>
 </body>
-
 </html>
+<script text="javascript">
+    function confirm_reset() {
+        return confirm("초기화 하시겠습니까?");
+    }
+</script>
