--- a/memo_test/public/index.html
+++ b/memo_test/public/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>INDEX</title>
+    <link rel="stylesheet" href="./css/font.css">
+    <link rel="stylesheet" href="./css/index.css">
 </head>
 <style>
     @font-face {
@@ -13,48 +15,12 @@
         font-weight: normal;
         font-style: normal;
     }
-    *{
-        text-align: center;
-        font-family: 'EarlyFontDiary';
-        font-size: large;
-    }
-    .memo{
-        display: inline-block;
-        text-align: center;
-        /* border: 1px solid aquamarine; */
-        width: fit-content;
-        height: auto;
-        background-color: yellow;
-    }
-    button{
-        border: 0;
-        width: 100px;
-        height: 30px;
-        cursor: pointer;
-        /* padding: 10px; */
-    }
-    #save{
-        background-color: green;
-    }
-    #reset{
-        background-color: red;
-    }
-    input{
-        border: 0;
-    }
-    textarea{
-        border: 0;
-        text-align: left;
-    }
-    .input_title{
-        width: 220px;
-    }
 </style>
 <body>
     <div class="main">
-        <a href="/login.html">로그인</a>
-        <a href="/signup.html">회원가입</a>
-        <a href="/memo.html">메모장</a>
+        <a href="/public/login.html">로그인</a>
+        <a href="/public/signup.html">회원가입</a>
+        <a href="/public/memo.html">메모장</a>
     </div>
 </body>
 </html>
